[package]
name = "rust_concurrency_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stopwatch = "0.0.7"

[[bin]]
name = "rust_concurrency_playground"
path = "src/main.rs"

[lib]
name = "rust_concurrency_playground_lib"
path = "src/lib/lib.rs"
